syntax = "proto3";

package users;

option go_package = "./src/gen/auth";

service AuthService {
    rpc Login(LoginRequest) returns (AuthResponse);
    rpc Signup(SignupRequest) returns (AuthResponse);
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message SignupRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
}

message AuthResponse {
    int64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    string token = 5;
}